@@ -140,9 +140,9 @@ main(int argc, char *argv[])
 
     /* calculational tolerances mostly used by NMG routines */
     tol.magic = BN_TOL_MAGIC;
-    tol.dist = 0.005;
+    tol.dist = 0.0005;
     tol.dist_sq = tol.dist * tol.dist;
-    tol.perp =1e-6;
+    tol.perp = 1e-6;
     tol.para = 1 - tol.perp;
 
     /* Defaults, updated by command line options. */
